# ur

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agent-memory/arch-designer/: MEMORY.md  issue-10-message-serialization.md
.claude/agent-memory/code-reviewer/: MEMORY.md
.claude/agent-memory/tdd-expert/: MEMORY.md
.claude/agent-memory/tech-trend-researcher/: MEMORY.md  vector-db-research.md
.claude/agents/: arch-designer.md  code-reviewer.md  tdd-expert.md  tech-trend-researcher.md
.claude/memory/: MEMORY.md
.claude/skills/reviewer-skill/: SKILL.md
doc/: 2026-02-25.md  2026-02-27.md  2026-02-28.md  2026-03-01.md  2026-03-02.md  DEVLOG.md
docs/devlog/: 2026-02-25.md  2026-02-26-memory-vector-db.md  2026-02-27.md  2026-03-02.md  2026-03-03.md  2026-03-06.md  2026-03-07.md  2026-03-08.md  2026-03-09.md  2026-03-10.md  2026-03-11.md  2026-03-12.md  2026-03-13.md  2026-03-14.md  2026-03-15.md
docs/plan/: phase1.md  phase2.1.md  phase2.md  phase3.1.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md
docs/plans/: phase-2-browser-get.md  phase-3.md  plugin-system.md
src/client/: base.hpp  fbs.hpp  main.cpp
src/client/screen/: connect.cpp  connect.hpp  game.cpp  game.hpp  menu.cpp  menu.hpp  option.cpp  option.hpp  warning.cpp  warning.hpp
src/common/: base.hpp  engine.hpp
src/fbs/: client.fbs  player.fbs
src/server/: connect.cpp  connect.hpp  engine.hpp  main.cpp
src/ur/: CMakeLists.txt  config.py  env.cpp  env.hpp  main.cpp  main.py  tui.py
src/ur/agent/: chat.cpp  chat.hpp  loop.py  models.py  persona_updater.cpp  persona_updater.hpp  runner.cpp  runner.hpp  session.py
src/ur/cli/: command.cpp  command.hpp  context.cpp  context.hpp  tui.cpp  tui.hpp
src/ur/llm/: client.py  http_provider.cpp  http_provider.hpp  provider.hpp
src/ur/log/: logger.cpp  logger.hpp
src/ur/memory/: crypto.cpp  crypto.hpp  database.cpp  database.hpp  db.py  session_store.py  workspace.cpp  workspace.hpp
src/ur/tools/: builtin.py  dl_compat.hpp  executor.cpp  executor.hpp  loader.cpp  loader.hpp  plugins.py  registry.py  sandbox.cpp  sandbox.hpp  tool.hpp
src/ur/tools/builtin/: bash.cpp  bash.hpp  read_file.cpp  read_file.hpp  read_image.cpp  read_image.hpp  web_fetch.cpp  web_fetch.hpp  web_search.cpp  web_search.hpp  write_file.cpp  write_file.hpp
tests/: conftest.py
tests/unit/: CMakeLists.txt  test_builtin_tools.cpp  test_chat.cpp  test_config.py  test_crypto.cpp  test_database.cpp  test_executor.cpp  test_http_provider.cpp  test_llm_client.py  test_loader.cpp  test_loop.py  test_main.py  test_memory.py  test_models.py  test_persona_updater.cpp  test_runner.cpp  test_sandbox.cpp  test_session.py  test_tools.py  test_tui.py  test_workspace.cpp
