[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ur"
version = "0.1.0"
description = "Agent assisted workflow"
requires-python = ">=3.12"

dependencies = [
    # LLM & Agent Engine
    "litellm>=1.40",
    "ollama>=0.4",
    # Memory & State
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    # Interface
    "typer>=0.12",
    "rich>=13.7",
    "textual>=0.37",
    # Cross-platform utilities
    "platformdirs>=4.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
tools = [
    "playwright>=1.45",
    "markdownify>=0.13",
    "httpx>=0.27",
    "aiofiles>=23.2",
    "psutil>=5.9",
]
sandbox = ["docker>=7.0"]
sandbox-wasm = ["wasmtime>=20.0"]
api = ["fastapi>=0.111", "uvicorn[standard]>=0.30"]
memory = ["chromadb>=0.5", "sentence-transformers>=3.0"]
queue = ["arq>=0.26"]
observability = ["opentelemetry-sdk>=1.25", "langfuse>=2.30"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "pytest-env>=1.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
ur = "ur.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ur"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "D:UR_MODEL=gemini/gemini-2.5-flash-lite",
    "D:GEMINI_API_KEY=gm-test-key",
]
markers = [
    "gemini: tests specific to the Gemini provider",
    "ollama: tests specific to the Ollama provider",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "ur.tools.builtin"
ignore_missing_imports = true
